[gd_scene load_steps=10 format=2]

[ext_resource path="res://Recursos/Fonts/Kenney.tres" type="DynamicFont" id=1]
[ext_resource path="res://Pantallas/Interfaces/Inventario.gd" type="Script" id=2]
[ext_resource path="res://Componentes/Boton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/Imagenes/16bitSpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Estilos/Interfaz.tres" type="Theme" id=5]
[ext_resource path="res://Pantallas/Interfaces/PanelInventario.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 21, 176, 5, 16 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 4, 160, 7, 32 )

[sub_resource type="Theme" id=5]
VScrollBar/styles/grabber = SubResource( 3 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 4 )

[node name="PanelInventario" type="Panel"]
margin_right = 448.0
margin_bottom = 256.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="PanelInventario" type="Panel" parent="."]
margin_left = 264.0
margin_top = 16.0
margin_right = 440.0
margin_bottom = 128.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="GridContainer" type="GridContainer" parent="PanelInventario"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5

[node name="PanelNombre" type="Panel" parent="."]
margin_left = 152.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 49.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="TextoNombre" type="Label" parent="PanelNombre"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="PanelDescripcion" type="Panel" parent="."]
margin_left = 152.0
margin_top = 56.0
margin_right = 256.0
margin_bottom = 232.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="PanelDescripcion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = SubResource( 5 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelDescripcion/ScrollContainer"]
margin_right = 94.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextoDescripcion" type="Label" parent="PanelDescripcion/ScrollContainer/VBoxContainer"]
margin_right = 94.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
autowrap = true

[node name="TextoEstadisticas" type="RichTextLabel" parent="PanelDescripcion/ScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 94.0
margin_bottom = 166.0
theme = ExtResource( 5 )
bbcode_enabled = true
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 264.0
margin_top = 136.0
margin_right = 440.0
margin_bottom = 232.0
custom_constants/separation = 0
__meta__ = {
"_edit_group_": true
}

[node name="Boton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 176.0
margin_bottom = 23.0
text = "Usar"

[node name="Boton2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 23.0
margin_right = 176.0
margin_bottom = 46.0
text = "Equipar"

[node name="Boton3" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 46.0
margin_right = 176.0
margin_bottom = 69.0
text = "Tirar"

[node name="Boton4" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 69.0
margin_right = 176.0
margin_bottom = 92.0
text = "Descartar"

[node name="SlotArma" parent="." instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 104.0
margin_right = 40.0
margin_bottom = 136.0
tipo = "arma"

[node name="SlotCabeza" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 56.0
margin_right = 144.0
margin_bottom = 88.0
tipo = "cabeza"

[node name="SlotTorso" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 120.0
tipo = "torso"

[node name="SlotPiernas" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 128.0
margin_right = 144.0
margin_bottom = 160.0
tipo = "piernas"

[node name="SlotPies" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 160.0
margin_right = 144.0
margin_bottom = 192.0
tipo = "pies"

[node name="SlotAmuleto_1" parent="." instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 200.0
margin_right = 40.0
margin_bottom = 232.0
tipo = "amuleto1"

[node name="SlotAmuleto_2" parent="." instance=ExtResource( 6 )]
margin_left = 40.0
margin_top = 200.0
margin_right = 72.0
margin_bottom = 232.0
tipo = "amuleto2"

[node name="SlotAmuleto_3" parent="." instance=ExtResource( 6 )]
margin_left = 80.0
margin_top = 200.0
margin_right = 112.0
margin_bottom = 232.0
tipo = "amuleto3"

[node name="SlotAmuleto_4" parent="." instance=ExtResource( 6 )]
margin_left = 112.0
margin_top = 200.0
margin_right = 144.0
margin_bottom = 232.0
tipo = "amuleto4"
